[package]
name = "multipart-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = ".."
edition = "2018"

[[bin]]
name = "multipart"
path = "src/main.rs"

[dependencies]
actix-web = "2.0.0-alpha.1"
actix-multipart = "0.2.0-alpha.1"

env_logger = "0.6"
futures = "0.3.1"
